--- a/index.html
+++ b/index.html
@@ -5,21 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Blog preview card</title>
 
 </head>
 <body>
 
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
+  <main class="main">
+    <div class="card">
+      <img class="image" src="assets/images/illustration-article.svg" alt="image article">
+      <h2 class="label">Learning</h2>
+      <p class="date">Published 21 Dec 2023</p>
+      <h1 class="title">HTML & CSS foundations</h1>
+      <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+      <div class="user">
+        <img class="user__image" src="assets/images/image-avatar.webp" alt="photo of Greg Hooper">
+        <p class="user__name">Greg Hooper</p>
+      </div>
+    </div>
+  </main>
   
 </body>
 </html>
